--- a/libs/style.css
+++ b/libs/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F4F6F9;
+  background-color: #FAFAFA;
   margin:0;
   padding:0;
 }
@@ -62,6 +62,11 @@ table#adm-table {
     color: #555;
   }
 
+  .bk-pink {
+    background-color:#ebb2eb;
+    color: #555;
+  }
+
 
   .bk-success {
     background-color:#28A745;
@@ -71,6 +76,25 @@ table#adm-table {
   .mt-3 {
     margin-top: 30px;
   }
+
+  .mt-4 {
+    margin-top: 40px;
+  }
+
+  .mt-6 {
+    margin-top: 60px;
+  }
+
+  hr.akv {
+    margin-top: 50px;
+    border-top: 1px solid #DBDBDB;
+    padding-bottom: 10px;
+  }
+
+  .mt-2 {
+    margin-top: 20px;
+  }
+
   .bk-danger {
     background-color:#C6303F;
     color: #fff;
