--- a/libs/style.css
+++ b/libs/style.css
@@ -99,20 +99,25 @@ table#adm-table {
     background-color:#C6303F;
     color: #fff;
   }
+
+  .bk-grey {
+    background-color:#636964;
+    color: #fff;
+  }
+
   .panel-default>.bk-white {
     background-color:  #fff;
     color: #111;
     font-size: l  arge;
   }
 
-  .panel {
-    border-radius: 0;
-    box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), inset 0 -1px 0 0 #dadce0;
+  .akv-border{
+    border: 1px solid #eaeaea;
   }
 
-  .navbar {
-    background-color: #fff;
-    box-shadow: 0 2px 6px 0 rgba(0,0,0,.12), inset 0 -1px 0 0 #dadce0;
+  .akv-info {
+    color: #777;
+    font-style: italic;
   }
 
   h3.count{
@@ -150,6 +155,16 @@ table#adm-table {
 .equal {  
   display: -webkit-flex;
   display: flex;
+}
+
+.navbar-default {
+  background-color: #077FA2;
+  border-color: #077FA2;
+  border-radius: 0;
+}
+
+.navbar-default .navbar-brand {
+  color: #fff;
 }
 
 
